Fix sceditor covering the backdrop

--- a/css/index.css
+++ b/css/index.css
@@ -7639,7 +7639,7 @@ body {
     background: #000000c2;
     top: 0;
     left: 0;
-    z-index: 2;
+    z-index: 6;
   }
 }
 * {
